tdf#139269 - Prevent pasting text into master pages

Prevent text pasting into readonly areas of master views.

Change-Id: I733a54fb19101dd813883ba76d4f4410998d0e67
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193071
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>