sd/source/ui/view/sdview3.cxx
@@ -1633,6 +1633,13 @@ bool View::InsertData( const TransferableDataHelper& rDataHelper,
 
                 if( pOLV )
                 {
+                    // tdf#139269 - prevent text pasting into readonly areas of master views
+                    if (!pPage)
+                        pPage = static_cast<SdPage*>(GetSdrPageView()->GetPage());
+
+                    if (pPage && pPage->IsMasterPage() && pOLV->IsReadOnly())
+                        return false;
+
                     pOLV->InsertText( aOUString );
                     return true;
                 }
